--- a/src/Feliz.ReactNative.fsproj
+++ b/src/Feliz.ReactNative.fsproj
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>Feliz.ReactNative</PackageId>
     <Version>0.8.2</Version>
     <Authors>Gaël Bouquain</Authors>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
+  
   <ItemGroup>
-    <Content Include="*.fsproj; *.fs; **\*.fs; *.js;" Exclude="**\*.fs.js" PackagePath="fable\" />
-
     <Compile Include="Types.fs" />
     <Compile Include="Interop.fs" />
 
@@ -22,5 +22,8 @@
     <Compile Include="Props.fs" />
     <Compile Include="Components.fs" />
   </ItemGroup>
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  
+  <ItemGroup>
+    <PackageReference Include="Feliz" Version="2.6.0" />
+  </ItemGroup>
 </Project>
