--- a/src/Feliz.ReactNative.fsproj
+++ b/src/Feliz.ReactNative.fsproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  
+
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -8,23 +8,24 @@
     <Authors>Gaël Bouquain</Authors>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
-  
+
   <ItemGroup>
-    <Compile Include="Types.fs" />
-    <Compile Include="Interop.fs" />
+    <Compile Include="Types.fs"/>
+    <Compile Include="Interop.fs"/>
 
-    <Compile Include="./Animation/Types.fs" />
-    <Compile Include="./Animation/NativeModules.fs" />
-    <Compile Include="./Animation/Animation.fs" />
+    <Compile Include="./Animation/Types.fs"/>
+    <Compile Include="./Animation/NativeModules.fs"/>
+    <Compile Include="./Animation/Animation.fs"/>
 
-    <Compile Include="Helpers.fs" />
-    <Compile Include="Styles.fs" />
-    <Compile Include="Props.fs" />
-    <Compile Include="Components.fs" />
-    <Compile Include="Gestures.fs" />
+    <Compile Include="Helpers.fs"/>
+    <Compile Include="Styles.fs"/>
+    <Compile Include="Props.fs"/>
+    <Compile Include="Components.fs"/>
+    <Compile Include="Linking.fs"/>
+    <Compile Include="Gestures.fs"/>
   </ItemGroup>
-  
+
   <ItemGroup>
-    <PackageReference Include="Feliz" Version="2.6.0" />
+    <PackageReference Include="Feliz" Version="2.6.0"/>
   </ItemGroup>
 </Project>
