Add android module types

--- a/src/Feliz.ReactNative.fsproj
+++ b/src/Feliz.ReactNative.fsproj
@@ -23,6 +23,7 @@
     <Compile Include="Components.fs"/>
     <Compile Include="Linking.fs"/>
     <Compile Include="Gestures.fs"/>
+    <Compile Include="Android.fs"/>
   </ItemGroup>
 
   <ItemGroup>
