--- a/src/Feliz.ReactNative.fsproj
+++ b/src/Feliz.ReactNative.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="Linking.fs"/>
     <Compile Include="Gestures.fs"/>
     <Compile Include="Android.fs"/>
+    <Compile Include="Platform.fs" />
   </ItemGroup>
 
   <ItemGroup>
