--- a/src/Feliz.ReactNative.fsproj
+++ b/src/Feliz.ReactNative.fsproj
@@ -24,7 +24,8 @@
     <Compile Include="Linking.fs"/>
     <Compile Include="Gestures.fs"/>
     <Compile Include="Android.fs"/>
-    <Compile Include="Platform.fs" />
+    <Compile Include="Platform.fs"/>
+    <Compile Include="AppState.fs"/>
   </ItemGroup>
 
   <ItemGroup>
